[package]
name = "rustchain"
version = "0.1.0"
authors = ["marco.gazzuolo <marco.gazzuolo@interlogica.it>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "^0.2"
chrono = "^0.4"
hex = "^0.2"
num-bigint = "0.1.40"
num-traits = "0.1.40"
clap = "~2.29.4"